[package]
name = "egui-glutin-gl"
version = "0.19.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12"
egui = { version = "0.20", features = ["bytemuck"] }
gl = "0.14"
egui-winit = { version = "0.20", default-features = false, features = ["clipboard", "links", "wayland"] }
glutin = { version = "0.30" }
log = "0.4"
memoffset = "0.6"
puffin = ">=0.12"
winit = "0.27"
